workspace(name = "antlr3")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_jar")

# This needs to be identical to the one used inhttps://github.com/antlr/stringtemplate4/blob/master/WORKSPACE.bazel.
http_jar(
    name = "antlr3_bootstrap",
    sha256 = "46531814ba9739cdf20c6c1789c252d3d95b68932813d79fb8bbfdf8d5840417",
    url = "http://www.antlr3.org/download/antlr-3.5.2-complete-no-st3.jar",
)

http_jar(
    name = "junit",
    sha256 = "8e495b634469d64fb8acfa3495a065cbacc8a0fff55ce1e31007be4c16dc57d3",
    url = "https://repo1.maven.org/maven2/junit/junit/4.13.2/junit-4.13.2.jar",
)

http_jar(
    name = "hamcrest_core",
    sha256 = "66fdef91e9739348df7a096aa384a5685f4e875584cce89386a7a47251c4d8e9",
    url = "https://repo1.maven.org/maven2/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar",
)

http_archive(
    name = "stringtemplate4",
    sha256 = "a91974e67013c1e68ef80794151dd66f04fc034cd3a9cf68af78867cd3067520",
    strip_prefix = "stringtemplate4-139f34243e516fc9d2cc4db8eeaa825014d631cc",
    url = "https://github.com/antlr/stringtemplate4/archive/139f34243e516fc9d2cc4db8eeaa825014d631cc.zip",
)
